@@ -7,10 +7,22 @@ use warnings;
 use version; our $VERSION = qv( sprintf '0.13.%d', q$Rev$ =~ /\d+/gmx );
 use parent qw(HTML::FormWidgets);
 
+__PACKAGE__->mk_accessors( qw(cols rows) );
+
+sub init {
+   my ($self, $args) = @_;
+
+   $self->cols( 60 );
+   $self->rows( 1  );
+   return;
+}
+
 sub render_field {
    my ($self, $args)  = @_;
 
    $args->{class} .= ($args->{class} ? q( ): q()).($self->class || q(ifield));
+
+   $args->{cols }  = $self->cols; $args->{rows} = $self->rows;
 
    return $self->hacc->textarea( $args );
 }
